<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_add_view_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#502A5E">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size_10"
        android:text="@string/voice_lock"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20sp" />

    <ImageButton
        android:id="@+id/btnSpeakUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/hello_world"
        android:scaleType="fitXY"
        android:src="@drawable/ic_round_mic_24_white" />

    <TextView
        android:id="@+id/test_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_password_to_unlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSpeakUnlock"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16_sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgetPassword"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_thu"
        android:background="@drawable/rectangle_button"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="@dimen/size_12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>