<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ctItemVideoFolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_10"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imVideoFolder"
        android:layout_width="112dp"
        android:layout_height="62dp"
        android:contentDescription="@string/hello_world"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        app:layout_constraintBottom_toBottomOf="@id/imVideoFolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imVideoFolder"
        app:layout_constraintTop_toTopOf="@id/imVideoFolder">

        <TextView
            android:id="@+id/tvFolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kinemaster"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFolderPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/www_google_com"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFolderName" />

        <TextView
            android:id="@+id/tvVideoNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_64_videos"
            android:textSize="@dimen/size_16_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFolderPath" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>