<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_8dp"
    tools:context=".view.SetTimerLockFragment">

    <TextView
        android:id="@+id/tvSetTimeLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time_lock"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewHint"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="@dimen/size_10"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetTimeLock"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/imHint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/hello_world"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_read_more_24" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:gravity="center_vertical"
        android:text="@string/note_timer_pin"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintStart_toStartOf="@id/cardViewHint"
        app:layout_constraintTop_toBottomOf="@id/cardViewHint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHint">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/round_corner_timer_lock_button"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOk"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/round_corner_timer_lock_button"
            android:text="@string/ok"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>