<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.OnBoarding2Fragment">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello_world"
        android:scaleType="fitXY"
        android:src="@drawable/onboard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello_world"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/size_36dp"
        android:src="@drawable/character_onboard2"
        app:layout_constraintBottom_toBottomOf="@id/im1"
        app:layout_constraintStart_toStartOf="@id/im1" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_60"
        android:text="@string/password_changes_over_time"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:textColor="@color/color_4f4f4f"
        android:textSize="@dimen/size_26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/size_36dp"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:text="@string/with_the_current_time"
        android:textColor="@color/color_828282"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t1" />

    <TextView
        android:id="@+id/btn2"
        android:layout_width="@dimen/size_328dp"
        android:layout_height="@dimen/size_55dp"
        android:background="@drawable/round_button_onboard"
        android:gravity="center"
        android:text="@string/next"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/size_16_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>