<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SecurityQuestionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSecurityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/security_question"
        android:textColor="#000000"
        android:textSize="@dimen/size_22sp"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleSelectRecoveryQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/sze_40dp"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:text="@string/select_recovery_question"
        android:textColor="#0063F7"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecurityQuestion" />

    <com.example.voicelockscreen.view.CustomSpinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="@drawable/bg_spinner_question"
        android:dropDownVerticalOffset="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitleSelectRecoveryQuestion"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSelectRecoveryQuestion" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner"
        android:scaleType="fitXY"
        android:layout_marginEnd="@dimen/size_10"
        android:contentDescription="@string/hello_world"
        app:layout_constraintBottom_toBottomOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="@id/spinner"
        android:src="@drawable/item_rowdown"
        />
    <EditText
        android:id="@+id/tvAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sze_40dp"
        android:autofillHints="name"
        android:hint="@string/type_your_answer_here"
        android:inputType="text"
        android:textSize="@dimen/size_17sp"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitleSelectRecoveryQuestion"
        android:textColorHint="#BDBDBD"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/sze_40dp"
        android:background="@drawable/round_button_2"
        android:gravity="center"
        android:paddingVertical="@dimen/size_15dp"
        android:text="@string/submit"
        android:fontFamily="@font/standard_font_sf_pro_regular"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/size_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer" />

</androidx.constraintlayout.widget.ConstraintLayout>